# mahjong_master

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/plans/: 2026-03-01-vision-pipeline-design.md  2026-03-01-vision-pipeline-implementation.md
src/: app_logging.py  cli.py  config.py  main.py  preflight.py
src/core/: capture.py  pipeline.py
src/ml/: __init__.py  placeholders.py
src/ui/: overlay.py
src/vision/: classifier.py  detector.py
tests/: conftest.py  test_app_logging.py  test_cli.py  test_config.py  test_main.py  test_preflight.py
tests/core/: test_capture.py  test_pipeline.py
tests/ml/: test_placeholders.py
tests/ui/: test_overlay.py
tests/vision/: test_classifier.py  test_detector.py
